--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
       width: 100%;
       border-radius: 16px;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.4);
+      object-fit: cover;
+      height: 250px;
     }
 
     footer {
@@ -88,15 +90,15 @@
 <body>
 
   <header>
-    <h1>🚀 Meouf.com is Coming Soon</h1>
-    <p>We’re working hard to launch something exciting. Stay tuned!</p>
+    <h1>🐾 Meouf.com is Coming Soon</h1>
+    <p>We’re working hard to launch something exciting for all pet lovers. Stay tuned!</p>
     <a href="mailto:hello@meouf.com?subject=Notify%20me%20when%20Meouf%20launches" class="button">
       Notify Me
     </a>
 
     <div class="image-grid">
-      <img src="https://images.unsplash.com/photo-1601758123927-198f0a50f3be?auto=format&fit=crop&w=800&q=80" alt="Happy dog">
-      <img src="https://images.unsplash.com/photo-1592194996308-7b43878e84a6?auto=format&fit=crop&w=800&q=80" alt="Cute cat">
+      <img src="https://images.unsplash.com/photo-1560807707-8cc77767d783?auto=format&fit=crop&w=800&q=80" alt="Happy dog">
+      <img src="https://images.unsplash.com/photo-1595433707802-6b2626ef1e8f?auto=format&fit=crop&w=800&q=80" alt="Cute cat">
     </div>
   </header>
 
