--- a/index.html
+++ b/index.html
@@ -155,38 +155,53 @@
 <body>
 
   <header>
+    <!-- LOGO will be embedded here later -->
     <img src="meouf.jpg" alt="Meouf Logo" class="logo">
-    <h1>🐾 Meouf — Premium Pet Launch</h1>
-    <p>Introducing a new era of luxury pet care, crafted with love and expertise. Join us on October 06, 2025, for an exclusive unveiling.</p>
-    <a href="mailto:hello@meouf.com?subject=Reserve%20my%20premium%20access" class="button">Secure Access</a>
+    <h1>🐾 Meouf — Premium Pet Care</h1>
+    <p>Meouf.com is a Montreal-based platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s love for pets, we bring high-quality, sustainable products to owners across Canada and beyond.</p>
+    <a href="mailto:info@meouf.com?subject=Join%20Meouf%20Premium%20Access" class="button">Join Us</a>
 
     <div class="carousel">
       <img src="https://images.unsplash.com/photo-1548242056-1e9d0c3e8d93?auto=format&fit=crop&w=1000&q=80" alt="Majestic cat" class="active">
       <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?auto=format&fit=crop&w=1000&q=80" alt="Noble dog">
       <img src="https://images.unsplash.com/photo-1601758123897-3c0f0e4e2c7a?auto=format&fit=crop&w=1000&q=80" alt="Harmonious pets">
       <div class="contact-overlay">
-        <span>hello@meouf.com</span>
+        <span>info@meouf.com</span>
         <span>For order inquiries, please contact us</span>
       </div>
     </div>
   </header>
 
   <section>
-    <h2 class="section-title">Our Legacy</h2>
-    <p>Meouf, a Montreal-based pioneer, launches on October 06, 2025, as the gold standard in premium pet care for cats and dogs. Inspired by my grandfather’s lifelong devotion to animals, we offer a curated selection of sustainable, high-end products for pet lovers worldwide.</p>
+    <h2 class="section-title">Our Story</h2>
+    <p>Meouf.com is a Montreal-based e-commerce platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s deep love for pets, which sparked my lifelong passion for animals, Meouf.com brings high-quality, sustainable products to pet owners. From a vision rooted in family and care, we’re building a trusted online destination for pet lovers in Canada and beyond.</p>
 
-    <h2 class="section-title">Our Mission</h2>
-    <p>To deliver unparalleled luxury and care for pets through innovative, eco-friendly solutions, preserving a heritage of compassion.</p>
+    <h2 class="section-title">Mission</h2>
+    <p>To enrich the lives of cats and dogs by providing top-tier, eco-friendly products that make pet care simple, sustainable, and joyful, while honoring my grandfather’s legacy of love for animals.</p>
 
-    <h2 class="section-title">Exquisite Offerings</h2>
-    <p>Discover our premium pet essentials: Gourmet Diets, Handcrafted Toys, Luxury Accessories, Plush Beds, and Spa Treatments. Enjoy personalized services including priority shipping and bespoke consultations.</p>
+    <h2 class="section-title">Values</h2>
+    <p><strong>Pet-First Philosophy:</strong> Inspired by my grandfather, we prioritize safe, high-quality products that enhance pet well-being.</p>
+    <p><strong>Sustainability:</strong> We use eco-friendly materials and packaging, partnering with ethical brands.</p>
+    <p><strong>Community:</strong> Rooted in Montreal, we support animal shelters and foster pet owner connections.</p>
+    <p><strong>Convenience:</strong> We deliver affordable, innovative solutions for modern pet care.</p>
 
-    <h2 class="section-title">Our Future</h2>
-    <p>Meouf aspires to lead the global luxury pet care market, forging prestigious partnerships while rooted in Montreal. By 2030, we envision an international presence, ensuring every pet thrives in luxury.</p>
+    <h2 class="section-title">Products & Services</h2>
+    <p>Meouf.com offers curated pet essentials including:</p>
+    <ul style="max-width:800px; margin:0 auto; text-align:left; font-size:1.2em;">
+      <li><strong>Food & Nutrition:</strong> Premium dry/wet foods, treats, and supplements (organic, grain-free).</li>
+      <li><strong>Toys & Enrichment:</strong> Interactive toys for mental and physical stimulation.</li>
+      <li><strong>Clothing & Accessories:</strong> Stylish coats, harnesses, and sweaters for Montreal’s climate.</li>
+      <li><strong>Beds & Comfort:</strong> Cozy, durable beds and orthopedic options.</li>
+      <li><strong>Daily Care:</strong> Grooming tools, litter solutions, and eco-friendly care products.</li>
+    </ul>
+    <p>Services include fast shipping (same-day in Montreal), subscriptions, pet care guides, and gift bundles. A portion of sales supports animal shelters.</p>
+
+    <h2 class="section-title">Our Goals</h2>
+    <p>We aim to be Canada’s leading online pet retailer, expanding with local and sustainable partnerships while staying true to our Montreal roots. Our vision is to grow internationally within five years, ensuring every pet thrives and every owner feels supported.</p>
   </section>
 
   <footer>
-    <p>© 2025 Meouf — All rights reserved. | <a href="mailto:hello@meouf.com">Contact Us</a></p>
+    <p>© 2025 Meouf — All rights reserved. | <a href="mailto:info@meouf.com">Contact Us</a></p>
   </footer>
 
 </body>
