--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       position: relative;
     }
 
-    /* Logo Top Left */
     .logo {
       position: absolute;
       top: 20px;
@@ -43,6 +42,7 @@
       font-weight: 800;
       letter-spacing: 2px;
       text-transform: uppercase;
+      text-align: center;
     }
 
     p {
@@ -118,6 +118,24 @@
       font-family: "Arial", sans-serif;
     }
 
+    .language-switch {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 100;
+    }
+
+    .language-switch select {
+      padding: 10px 15px;
+      font-size: 1em;
+      border-radius: 10px;
+      border: 2px solid #1e1e1e;
+      cursor: pointer;
+      font-family: "Arial", sans-serif;
+      background-color: #ffffff;
+      color: #1e1e1e;
+    }
+
     footer {
       text-align: center;
       padding: 40px 20px;
@@ -133,76 +151,118 @@
       .section-title { font-size: 1.8em; }
       a.button { padding: 12px 25px; font-size: 0.9em; }
       .contact-overlay { font-size: 0.9em; padding: 10px 15px; }
+      .language-switch { top: 10px; right: 10px; }
+      .language-switch select { padding: 8px 12px; font-size: 0.9em; }
     }
   </style>
-
-  <script>
-    window.onload = function() {
-      const images = document.querySelectorAll('.carousel img');
-      let index = 0;
-
-      function showNextImage() {
-        images.forEach(img => img.classList.remove('active'));
-        images[index].classList.add('active');
-        index = (index + 1) % images.length;
-      }
-
-      showNextImage();
-      setInterval(showNextImage, 5000);
-    };
-  </script>
 </head>
 <body>
 
+  <!-- Language Switcher -->
+  <div class="language-switch">
+    <select onchange="changeLanguage(this.value)">
+      <option value="en">English</option>
+      <option value="fr">Français</option>
+    </select>
+  </div>
+
   <header>
-    <!-- LOGO will be embedded here later -->
     <img src="meouf.jpg" alt="Meouf Logo" class="logo">
-    <h1>🐾 Meouf — Premium Pet Care</h1>
-    <p>Meouf.com is a Montreal-based platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s love for pets, we bring high-quality, sustainable products to owners across Canada and beyond.</p>
-    <a href="mailto:info@meouf.com?subject=Join%20Meouf%20Premium%20Access" class="button">Join Us</a>
+    <h1 data-translate="header-title">🐾 Meouf — Premium Pet Care</h1>
+    <p data-translate="header-desc">Meouf.com is a Montreal-based platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s love for pets, we bring high-quality, sustainable products to owners across Canada and beyond.</p>
+    <a href="mailto:info@meouf.com?subject=Join%20Meouf%20Premium%20Access" class="button" data-translate="button-text">Join Us</a>
 
     <div class="carousel">
       <img src="https://images.unsplash.com/photo-1548242056-1e9d0c3e8d93?auto=format&fit=crop&w=1000&q=80" alt="Majestic cat" class="active">
       <img src="https://images.unsplash.com/photo-1514888286974-6c03e2ca1dba?auto=format&fit=crop&w=1000&q=80" alt="Noble dog">
       <img src="https://images.unsplash.com/photo-1601758123897-3c0f0e4e2c7a?auto=format&fit=crop&w=1000&q=80" alt="Harmonious pets">
       <div class="contact-overlay">
-        <span>info@meouf.com</span>
-        <span>For order inquiries, please contact us</span>
+        <span data-translate="contact-email">info@meouf.com</span>
+        <span data-translate="contact-text">For order inquiries, please contact us</span>
       </div>
     </div>
   </header>
 
   <section>
-    <h2 class="section-title">Our Story</h2>
-    <p>Meouf.com is a Montreal-based e-commerce platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s deep love for pets, which sparked my lifelong passion for animals, Meouf.com brings high-quality, sustainable products to pet owners. From a vision rooted in family and care, we’re building a trusted online destination for pet lovers in Canada and beyond.</p>
+    <h2 class="section-title" data-translate="story-title">Our Story</h2>
+    <p data-translate="story-desc">Meouf.com is a Montreal-based e-commerce platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s deep love for pets, which sparked my lifelong passion for animals, Meouf.com brings high-quality, sustainable products to pet owners. From a vision rooted in family and care, we’re building a trusted online destination for pet lovers in Canada and beyond.</p>
 
-    <h2 class="section-title">Mission</h2>
-    <p>To enrich the lives of cats and dogs by providing top-tier, eco-friendly products that make pet care simple, sustainable, and joyful, while honoring my grandfather’s legacy of love for animals.</p>
+    <h2 class="section-title" data-translate="mission-title">Mission</h2>
+    <p data-translate="mission-desc">To enrich the lives of cats and dogs by providing top-tier, eco-friendly products that make pet care simple, sustainable, and joyful, while honoring my grandfather’s legacy of love for animals.</p>
 
-    <h2 class="section-title">Values</h2>
-    <p><strong>Pet-First Philosophy:</strong> Inspired by my grandfather, we prioritize safe, high-quality products that enhance pet well-being.</p>
-    <p><strong>Sustainability:</strong> We use eco-friendly materials and packaging, partnering with ethical brands.</p>
-    <p><strong>Community:</strong> Rooted in Montreal, we support animal shelters and foster pet owner connections.</p>
-    <p><strong>Convenience:</strong> We deliver affordable, innovative solutions for modern pet care.</p>
+    <h2 class="section-title" data-translate="values-title">Values</h2>
+    <p data-translate="value-1"><strong>Pet-First Philosophy:</strong> Inspired by my grandfather, we prioritize safe, high-quality products that enhance pet well-being.</p>
+    <p data-translate="value-2"><strong>Sustainability:</strong> We use eco-friendly materials and packaging, partnering with ethical brands.</p>
+    <p data-translate="value-3"><strong>Community:</strong> Rooted in Montreal, we support animal shelters and foster pet owner connections.</p>
+    <p data-translate="value-4"><strong>Convenience:</strong> We deliver affordable, innovative solutions for modern pet care.</p>
 
-    <h2 class="section-title">Products & Services</h2>
-    <p>Meouf.com offers curated pet essentials including:</p>
+    <h2 class="section-title" data-translate="products-title">Products & Services</h2>
+    <p data-translate="products-desc">Meouf.com offers curated pet essentials including:</p>
     <ul style="max-width:800px; margin:0 auto; text-align:left; font-size:1.2em;">
-      <li><strong>Food & Nutrition:</strong> Premium dry/wet foods, treats, and supplements (organic, grain-free).</li>
-      <li><strong>Toys & Enrichment:</strong> Interactive toys for mental and physical stimulation.</li>
-      <li><strong>Clothing & Accessories:</strong> Stylish coats, harnesses, and sweaters for Montreal’s climate.</li>
-      <li><strong>Beds & Comfort:</strong> Cozy, durable beds and orthopedic options.</li>
-      <li><strong>Daily Care:</strong> Grooming tools, litter solutions, and eco-friendly care products.</li>
+      <li data-translate="product-1"><strong>Food & Nutrition:</strong> Premium dry/wet foods, treats, and supplements (organic, grain-free).</li>
+      <li data-translate="product-2"><strong>Toys & Enrichment:</strong> Interactive toys for mental and physical stimulation.</li>
+      <li data-translate="product-3"><strong>Clothing & Accessories:</strong> Stylish coats, harnesses, and sweaters for Montreal’s climate.</li>
+      <li data-translate="product-4"><strong>Beds & Comfort:</strong> Cozy, durable beds and orthopedic options.</li>
+      <li data-translate="product-5"><strong>Daily Care:</strong> Grooming tools, litter solutions, and eco-friendly care products.</li>
     </ul>
-    <p>Services include fast shipping (same-day in Montreal), subscriptions, pet care guides, and gift bundles. A portion of sales supports animal shelters.</p>
+    <p data-translate="services-desc">Services include fast shipping (same-day in Montreal), subscriptions, pet care guides, and gift bundles. A portion of sales supports animal shelters.</p>
 
-    <h2 class="section-title">Our Goals</h2>
-    <p>We aim to be Canada’s leading online pet retailer, expanding with local and sustainable partnerships while staying true to our Montreal roots. Our vision is to grow internationally within five years, ensuring every pet thrives and every owner feels supported.</p>
+    <h2 class="section-title" data-translate="goals-title">Our Goals</h2>
+    <p data-translate="goals-desc">We aim to be Canada’s leading online pet retailer, expanding with local and sustainable partnerships while staying true to our Montreal roots. Our vision is to grow internationally within five years, ensuring every pet thrives and every owner feels supported.</p>
   </section>
 
   <footer>
-    <p>© 2025 Meouf — All rights reserved. | <a href="mailto:info@meouf.com">Contact Us</a></p>
+    <p data-translate="footer-text">© 2025 Meouf — All rights reserved. | <a href="mailto:info@meouf.com">Contact Us</a></p>
   </footer>
 
-</body>
-</html>
+  <script>
+    const translations = {
+      en: {
+        "header-title": "🐾 Meouf — Premium Pet Care",
+        "header-desc": "Meouf.com is a Montreal-based platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s love for pets, we bring high-quality, sustainable products to owners across Canada and beyond.",
+        "button-text": "Join Us",
+        "contact-email": "info@meouf.com",
+        "contact-text": "For order inquiries, please contact us",
+        "story-title": "Our Story",
+        "story-desc": "Meouf.com is a Montreal-based e-commerce platform launching in 2025, dedicated to premium pet care for cats and dogs. Inspired by my late grandfather’s deep love for pets, which sparked my lifelong passion for animals, Meouf.com brings high-quality, sustainable products to pet owners. From a vision rooted in family and care, we’re building a trusted online destination for pet lovers in Canada and beyond.",
+        "mission-title": "Mission",
+        "mission-desc": "To enrich the lives of cats and dogs by providing top-tier, eco-friendly products that make pet care simple, sustainable, and joyful, while honoring my grandfather’s legacy of love for animals.",
+        "values-title": "Values",
+        "value-1": "Pet-First Philosophy: Inspired by my grandfather, we prioritize safe, high-quality products that enhance pet well-being.",
+        "value-2": "Sustainability: We use eco-friendly materials and packaging, partnering with ethical brands.",
+        "value-3": "Community: Rooted in Montreal, we support animal shelters and foster pet owner connections.",
+        "value-4": "Convenience: We deliver affordable, innovative solutions for modern pet care.",
+        "products-title": "Products & Services",
+        "products-desc": "Meouf.com offers curated pet essentials including:",
+        "product-1": "Food & Nutrition: Premium dry/wet foods, treats, and supplements (organic, grain-free).",
+        "product-2": "Toys & Enrichment: Interactive toys for mental and physical stimulation.",
+        "product-3": "Clothing & Accessories: Stylish coats, harnesses, and sweaters for Montreal’s climate.",
+        "product-4": "Beds & Comfort: Cozy, durable beds and orthopedic options.",
+        "product-5": "Daily Care: Grooming tools, litter solutions, and eco-friendly care products.",
+        "services-desc": "Services include fast shipping (same-day in Montreal), subscriptions, pet care guides, and gift bundles. A portion of sales supports animal shelters.",
+        "goals-title": "Our Goals",
+        "goals-desc": "We aim to be Canada’s leading online pet retailer, expanding with local and sustainable partnerships while staying true to our Montreal roots. Our vision is to grow internationally within five years, ensuring every pet thrives and every owner feels supported.",
+        "footer-text": "© 2025 Meouf — All rights reserved. | Contact Us"
+      },
+      fr: {
+        "header-title": "🐾 Meouf — Soins Premium pour Animaux",
+        "header-desc": "Meouf.com est une plateforme basée à Montréal, lancée en 2025, dédiée aux soins premium pour chats et chiens. Inspiré par l’amour profond de mon défunt grand-père pour les animaux, nous proposons des produits durables et de haute qualité aux propriétaires d’animaux à travers le Canada et au-delà.",
+        "button-text": "Rejoignez-nous",
+        "contact-email": "info@meouf.com",
+        "contact-text": "Pour les demandes de commande, contactez-nous",
+        "story-title": "Notre Histoire",
+        "story-desc": "Meouf.com est une plateforme e-commerce basée à Montréal, lancée en 2025, dédiée aux soins premium pour chats et chiens. Inspiré par l’amour profond de mon défunt grand-père pour les animaux, qui a inspiré ma passion de toute une vie pour les animaux, Meouf.com apporte des produits durables et de haute qualité aux propriétaires d’animaux. D’une vision enracinée dans la famille et le soin, nous construisons une destination en ligne fiable pour les amoureux des animaux au Canada et au-delà.",
+        "mission-title": "Mission",
+        "mission-desc": "Enrichir la vie des chats et des chiens en fournissant des produits écologiques et haut de gamme qui rendent les soins pour animaux simples, durables et agréables, tout en honorant l’héritage d’amour de mon grand-père.",
+        "values-title": "Valeurs",
+        "value-1": "Philosophie Pet-First : Inspiré par mon grand-père, nous privilégions des produits sûrs et de haute qualité qui améliorent le bien-être animal.",
+        "value-2": "Durabilité : Nous utilisons des matériaux et emballages écologiques, en partenariat avec des marques éthiques.",
+        "value-3": "Communauté : Basé à Montréal, nous soutenons les refuges pour animaux et favorisons les liens entre propriétaires.",
+        "value-4": "Commodité : Nous offrons des solutions abordables et innovantes pour les soins modernes des animaux.",
+        "products-title": "Produits & Services",
+        "products-desc": "Meouf.com propose des essentiels pour animaux soigneusement sélectionnés, notamment :",
+        "product-1": "Alimentation & Nutrition : Nourriture sèche/humide premium, friandises et compléments (bio, sans céréales).",
+        "product-2": "Jouets & Enrichissement : Jouets interactifs pour la stimulation mentale et physique.",
+        "product-3": "Vêtements & Accessoires : Manteaux, harnais et pulls élégants adaptés au climat de Montréal.",
+        "product-4": "Lits & Confort : Lits confortables, durables et options orthopédiques.",
+       
