--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Meouf — Premium Pet Care</title>
+  <title>Meouf — Pet Supplies</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;800&display=swap" rel="stylesheet">
 
   <style>
@@ -262,3 +262,4 @@
 
 </body>
 </html>
+
