--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
   <nav id="navbar">
     <div class="nav-container">
       <a href="#" class="nav-logo playfair">
-        <img src="https://i.imgur.com/8VZmK9p.png" alt="Meouf Logo" class="nav-logo-img">
+        <img src="https://raw.githubusercontent.com/Meouf1010/meouf.com/main/Generated%20Image%20October%2008%2C%202025%20-%205_45PM.png" alt="Meouf Logo" class="nav-logo-img">
         Meouf
       </a>
       <ul class="nav-links">
@@ -947,7 +947,7 @@
   <header>
     <div class="logo-container">
       <div class="logo-glow"></div>
-      <img src="https://i.imgur.com/8VZmK9p.png" alt="Meouf Logo" class="logo">
+      <img src="https://raw.githubusercontent.com/Meouf1010/meouf.com/main/Generated%20Image%20October%2008%2C%202025%20-%205_45PM.png" alt="Meouf Logo" class="logo">
     </div>
 
     <h1 class="playfair" data-translate="header-title">Premium Pet Care, Delivered</h1>
